# LifeImage

./: ProjectPtch.md  README.md  pyproject.toml  requirements.txt  test_centralized_fitness.py  test_species.py  test_species_colors.py  test_species_replacement.py
.github/instructions/: CopilotInstructions.instructions.md
config/: default.yaml
logs/: metrics.csv
src/: __init__.py  main.py
src/brains/: __init__.py  mlp.py
src/core/: __init__.py  config.py  simulation.py
src/environment/: __init__.py  gradients.py  grid.py
src/evolution/: __init__.py  mutation.py  reproduction.py  selection.py
src/fitness/: __init__.py  global_image.py
src/organisms/: __init__.py  organism.py
src/utils/: __init__.py  image_loader.py  metrics.py  rng.py
src/visuals/: renderer.py  renderer_new.py
tests/: conftest.py  test_brain.py  test_fitness_system.py  test_gradients.py  test_grid.py  test_integration.py  test_mutation_schedule.py  test_reproduction.py  test_selection_system.py  test_simulation_tick.py
tools/: README.md  image_editor.py
